# substrate-archive

./: .gitignore  Cargo.toml  Makefile  README.md  archive.toml  start.sh
.github/workflows/: build.yml
actor/: Cargo.toml
actor/src/: config.rs  error.rs  exec.rs  lib.rs  message.rs  messages.rs  types.rs
actor/src/actors/: block.rs  metadata.rs  mod.rs  postgres.rs
actor/src/actors/dispatch/: kafka.rs  mod.rs
actor/src/actors/dispatcher/: kafka.rs  mod.rs
actor/src/actors/scheduler/: best_finalized.rs  block.rs  mod.rs
client/: Cargo.toml
client/examples/: demo.rs  polkadot_runtime-v29.compact.wasm
client/src/: builder.rs  client.rs  config.rs  error.rs  lib.rs  utils.rs
client/src/backend/: blockchain.rs  misc.rs  mod.rs  state.rs
client/src/database/: mod.rs  rocksdb.rs
kafka/: Cargo.toml
kafka/examples/: demo.rs
kafka/scripts/: create_topics.sh  delete_topics.sh
kafka/src/: config.rs  lib.rs  payload.rs  producer.rs
postgres/: Cargo.toml
postgres/examples/: demo.rs
postgres/migrations/: 20210409032916_tables.sql  20210409084925_insert_new_block_fn.sql  20210409090020_blocks_trigger.sql  20210629095747_best_block.sql  20210929105826_metadata.sql  20210929105835_block.sql  20210929105855_storage.sql
postgres/scripts/: clean_db.sh  create_db.sh
postgres/src/: config.rs  lib.rs  model.rs  models.rs
postgres/src/database/: batch.rs  delete.rs  insert.rs  mod.rs  query.rs  update.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
scripts/check-rollback/: .eslintrc.js  .prettierrc.js  package.json  tsconfig.json
scripts/check-rollback/src/: main.ts
scripts/check-rollback/src/entity/: Block.ts
src/: archive.rs  cli.rs  error.rs  lib.rs  logger.rs  main.rs  primitives.rs
src/actors/: mod.rs  types.rs
src/actors/workers/: mod.rs
