[workspace]
members = [
  "client",
  "kafka",
  "postgres",
  "actor",
  "primitives",
]

[patch.crates-io]
# Client
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sc-state-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
# Primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-database = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.7" }

[package]
name = "archive"
version = "0.1.0"
authors = [
  "Patract <https://github.com/patractlabs>",
  "Andrew Plaza <andrew.plaza@parity.io>"
]
edition = "2018"
description = "Synchronize the substrate-backed chain to index all Blocks, State, and Extrinsic data."

[dependencies]
chrono = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
futures = "0.3"
hex = "0.4"
fdlimit = "0.2"
fern = { version = "0.6", features = ["colored"] }
flume = "0.10"
jod-thread = "0.1"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", features = ["suggestions", "color"] }
thiserror = "1.0"
tokio = { version = "1.6", features = ["rt-multi-thread"] }
toml = "0.5"

# Parity / Substrate
codec = { package = "parity-scale-codec", version = "2.0",  features = ["derive", "full"] }
sc-chain-spec = "3.0"
sc-client-api = "3.0"
sc-executor = { version = "0.9", features = ["wasmtime"] }
sp-api = "3.0"
sp-blockchain = "3.0"
sp-runtime = "3.0"
frame-benchmarking = "3.0"

# Archive Components
archive-client = { path = "./client" }
archive-actor = { path = "./actor" }
archive-postgres = { path = "./postgres" }
archive-kafka = { path = "./kafka" }
archive-primitives = { path = "./primitives" }

# Polkadot / Kusama
polkadot-runtime =  { git = "https://github.com/paritytech/polkadot", tag = "v0.9.7", optional = true }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.7", optional = true }

[features]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]

[[bin]]
name = "polkadot-archive"
path = "bin/polkadot/polkadot.rs"
required-features = ["polkadot"]

[[bin]]
name = "kusama-archive"
path = "bin/kusama/kusama.rs"
required-features = ["kusama"]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
