[workspace]
members = [
  "client",
  "kafka",
  "postgres",
  "actor",
  "primitives",
]

[package]
name = "archive"
version = "0.1.0"
authors = [
  "Patract <https://github.com/patractlabs>",
  "Andrew Plaza <andrew.plaza@parity.io>"
]
edition = "2018"
description = "Synchronize the substrate-backed chain to index all Blocks, State, and Extrinsic data."

[dependencies]
chrono = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
futures = "0.3"
hex = "0.4"
fdlimit = "0.2"
fern = { version = "0.6", features = ["colored"] }
flume = "0.10"
jod-thread = "0.1"
log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3", features = ["suggestions", "color"] }
thiserror = "1.0"
tokio = { version = "1.10", features = ["rt-multi-thread"] }
toml = "0.5"

# Parity / Substrate
codec = { package = "parity-scale-codec", version = "2.2",  features = ["derive", "full"] }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15", features = ["wasmtime"] }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.15" }

# Archive Components
archive-client = { path = "./client" }
archive-actor = { path = "./actor" }
archive-postgres = { path = "./postgres" }
archive-kafka = { path = "./kafka" }
archive-primitives = { path = "./primitives" }

# Polkadot / Kusama
polkadot-runtime =  { git = "https://github.com/paritytech/polkadot", tag = "v0.9.15", optional = true }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", tag = "v0.9.15", optional = true }

[features]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]

[[bin]]
name = "polkadot-archive"
path = "bin/polkadot/polkadot.rs"
required-features = ["polkadot"]

[[bin]]
name = "kusama-archive"
path = "bin/kusama/kusama.rs"
required-features = ["kusama"]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
