[package]
name = "archive-actor"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.6", features = ["rt-multi-thread"] }
xtra = { version = "0.5", features = ["with-tokio-1"] }

codec = { package = "parity-scale-codec", version = "2.0", features = ["derive", "full"] }
sc-client-api = "3.0"
sp-api = "3.0"
sp-blockchain = "3.0"
sp-core = "3.0"
sp-finality-grandpa = "3.0"
sp-runtime = "3.0"
sp-state-machine = "0.9"
sp-storage = "3.0"
sp-version = "3.0"

archive-postgres = { path = "../postgres" }
archive-kafka = { path = "../kafka" }
