[package]
name = "archive-client"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
hex = "0.4"
log = "0.4"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }

# Parity
codec = { package = "parity-scale-codec", version = "2.0",  features = ["derive", "full"] }
hash-db = "0.15"
kvdb = "0.9"
kvdb-rocksdb = "0.11"
memory-db = "0.26"

# Substrate
sc-chain-spec = "3.0"
sc-client-api = "3.0"
sc-client-db = "0.9"
sc-executor = { version = "0.9", features = ["wasmtime"] }
sc-service = "0.9"
sc-state-db = "0.9"
sp-api = "3.0"
sp-blockchain = "3.0"
sp-core = "3.0"
sp-consensus = "0.9"
sp-database = "3.0"
sp-runtime = "3.0"
sp-state-machine = "0.9"
sp-storage = "3.0"
sp-version = "3.0"
sp-wasm-interface = "3.0"

[dev-dependencies]
env_logger = "0.8"

sc-executor-common = "0.9"
sp-externalities = "0.9"
sp-io = "3.0"
sp-runtime-interface = "3.0"
