[package]
name = "archive-kafka"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
hex = "0.4"
log = "0.4"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

codec = { package = "parity-scale-codec", version = "2.1" }

sp-core = "3.0"
sp-runtime = "3.0"
sp-storage = "3.0"

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
