[package]
name = "archive-kafka"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
async-trait = "0.1"
hex = "0.4"
log = "0.4"
rdkafka = { version = "0.26", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

codec = { package = "parity-scale-codec", version = "2.2" }
sp-core = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-storage = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
chrono = "0.4"
env_logger = "0.9"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
