[package]
name = "archive-postgres"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
async-trait = "0.1"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls", "json"] }

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
